--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "objection": "^2.2.3",
     "ramda": "^0.27.1",
     "sequelize": "^6.3.4"
   },
