--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "ISC",
+  "engines": {
+    "node": "14.4.0",
+    "yarn": "1.22.4"
+  },
   "scripts": {
     "dev": "nodemon ./index.js",
     "lint": "eslint './**/*.js'"
