--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.16",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.4",
     "objection": "^2.2.3",
     "ramda": "^0.27.1",
+    "randomstring": "^1.1.5",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
