--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.16",
     "nodemailer-express-handlebars": "^4.0.0",
