--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,12 @@
   "env": {
     "node": true
   },
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "extends": "airbnb-base",
   "rules": {
