--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
