fixed front url

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DATABASE_PASSWORD = mypassword
 DATABASE_HOST = localhost
 APP_KEY = mysecretkeyforweblibrary12412412434
 
-FRONT_END_URL=http://localhost:3000/
+FRONT_END_URL=https://weblibrary-front.000webhostapp.com/
 
 GMAIL_SERVICE_NAME = gmail
 GMAIL_SERVICE_HOST = smtp.gmail.com
